[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/wand.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="Pivot"]
position = Vector2( 0, -15 )
texture = ExtResource( 1 )

[node name="WandPivot" type="Node2D" parent="Pivot"]
position = Vector2( 0, -6 )

[node name="Wand" type="Sprite" parent="Pivot/WandPivot"]
position = Vector2( 6, -3 )
texture = ExtResource( 3 )

[node name="CastPoint" type="Position2D" parent="Pivot/WandPivot/Wand"]
position = Vector2( 13, -3 )

[node name="Pushbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
